# info521-projects-2026

./: .gitignore  GRADING.md  README.md  _quarto.yml  environment.yml  pyproject.toml
checkpoints/: README.md  checkpoint-1-normal-equations.md  checkpoint-2-mle.md  checkpoint-3-posterior.md  checkpoint-4-newton-raphson.md  checkpoint-5-kmeans-pca.md
common/info521/: __init__.py  checks.py  data.py  plotting.py
data/: README.md  build_nhanes.py  clinical_reference.csv  generate_reference_data.py  nhanes_2021_2022.csv
instructor/: dataset-curation.md  nhanes-build-prompt.md  peer-review.md
pdfs/: README.md
project-1/: 1.1-least-squares.qmd  1.2-maximum-likelihood.qmd  1.3-bayesian.qmd  1.4-synthesis.qmd  README.md
project-2/: 2.1-approximate-inference.qmd  2.2-classification.qmd  2.3-clustering.qmd  2.4-dimensionality-reduction.qmd  2.5-synthesis.qmd  README.md
solutions/: README.md  VALIDATION.md  _reference.py
solutions/project-1/: 1.1-least-squares.qmd  1.2-maximum-likelihood.qmd  1.3-bayesian.qmd  1.4-synthesis.qmd
solutions/project-2/: 2.1-approximate-inference.qmd  2.2-classification.qmd  2.3-clustering.qmd  2.4-dimensionality-reduction.qmd  2.5-synthesis.qmd
