[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "info521"
version = "0.1.0"
description = "Plumbing (data, plotting, self-checks) for INFO 521 projects. No estimators."
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1,<2.3",
    "scipy>=1.13",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["common"]
